added functionalities to prepare biolabs sars-cov-2 sequences for release to gisaid

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "nonconcerning_genes": ["5UTR", "3UTR", "Non-coding region"],
+    "nonconcerning_genes": ["5UTR", "3UTR"],
     "nonconcerning_mutations": ["ORF8:Q27*"],
     "out_dir": "/southpark/gisaid",
     "date": "2021-03-30",
@@ -14,7 +14,7 @@
     "divisions_filepath": "/home/al/data/geojsons/gadm_divisions.json",
     "locations_filepath": "/home/al/data/geojsons/gadm_locations.json",
     "ref_fasta": "/home/al/data/hcov19/NC045512.fasta",
-    "num_cpus": "1",
+    "num_cpus": "4",
     "is_gzip": false,
     "is_test": false,
     "feed_test": false,
@@ -23,6 +23,12 @@
     "alab_sequences": "/home/al/code/HCoV-19-Genomics/consensus_sequences/",
     "alab_meta": "/home/al/code/HCoV-19-Genomics/metadata.csv",
     "alab_out_dir": "/valhalla/analysis/alab_mutations",
+    "release_outdir": "/Users/al/Documents/scripps/analysis/jordan/2021-02_run2_release",
+    "reference_filepath": "/Users/al/Documents/scripps/data/hcov19/NC045512.fasta",
+    "biolabs_meta": "/Users/al/Documents/scripps/analysis/jordan/metadata_2021-02_run2.xls",
+    "biolabs_date": "2021-02-17",
+    "min_coverage": 95,
+    "msa_filepath": "/Users/al/Documents/scripps/analysis/jordan/2021-02_run2_release/msa/sample_2429882_aligned.fasta",
     "patient_zero": "NC_045512.2",
     "unknown_value": "None",
     "min_date": "2020-01-25",
