updated to add submitter and fasta filenaming

--- a/biolab_config.json
+++ b/biolab_config.json
@@ -1,4 +1,5 @@
 {
+    "submitter": "",
     "fasta_hub": "/mnt/c/Users/biolab/Desktop/Scripps_project/GISAID_Sequence_Release/FASTA_Release_Hub",
     "meta_hub": "/mnt/c/Users/biolab/Desktop/Scripps_project/GISAID_Sequence_Release/meta_release_hub",
     "results_hub": "/mnt/c/Users/biolab/Desktop/Scripps_project/GISAID_Sequence_Release/Results_output_hub",
